--- a/main/index.html
+++ b/main/index.html
@@ -5,6 +5,9 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="#" type="text/css">
+    <link rel="stylesheet" href="#" type="text/css">
+
+    <script src="https://hammerjs.github.io/dist/hammer.js"></script>
 
     <style>
         body {
@@ -38,8 +41,20 @@
                 <div class="shadow shadow--bl"></div>
             </div>
             <div class="inner-shadow"></div>
-            <div class="screen">
-                <iframe src="#" width="100%" height="100%" frameborder="0"></iframe>
+            <div class="screen" style="box-sizing: border-box;">
+                <div class="safari-top-bar">
+                    <span class="url-bar"></span>
+                </div>
+                <iframe src="#" width="100%" frameborder="0"></iframe>
+                <div class="safari-bottom-bar">
+                    <ul>
+                        <li>B</li>
+                        <li>N</li>
+                        <li>S</li>
+                        <li>F</li>
+                        <li>T</li>
+                    </ul>
+                </div>
             </div>
         </div>
 
